--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "wdio-cli": "^5.0.0-beta.3"
   },
   "devDependencies": {
-    "wdio-local-runner": "^5.0.0-alpha.7",
-    "wdio-mocha-framework": "^0.6.3",
-    "wdio-selenium-standalone-service": "0.0.10",
-    "wdio-spec-reporter": "^0.1.5",
-    "wdio-sync": "^0.7.2"
+    "wdio-local-runner": "^5.0.0-beta.3",
+    "wdio-mocha-framework": "^5.0.0-beta.3",
+    "wdio-selenium-standalone-service": "5.0.0-beta.3",
+    "wdio-spec-reporter": "^5.0.0-beta.3",
+    "wdio-sync": "^5.0.0-beta.3"
   }
 }
